--- a/index.html
+++ b/index.html
@@ -504,7 +504,10 @@
                           <!--Product-->
                           <article class="vlt-project">
                             <h3 class="vlt-project-title">
-                              Carro<span class="has-accent-color">.</span>
+                              Estruturação de crédito<span
+                                class="has-accent-color"
+                                >.</span
+                              >
                             </h3>
                             <div class="vlt-project-excerpt">
                               <p>
@@ -528,7 +531,10 @@
                           <!--Product-->
                           <article class="vlt-project">
                             <h3 class="vlt-project-title">
-                              Relógio<span class="has-accent-color">.</span>
+                              Consultoria financeira<span
+                                class="has-accent-color"
+                                >.</span
+                              >
                             </h3>
                             <div class="vlt-project-excerpt">
                               <p>
@@ -552,7 +558,9 @@
                           <!--Product-->
                           <article class="vlt-project">
                             <h3 class="vlt-project-title">
-                              Imobiliária<span class="has-accent-color">.</span>
+                              Certificado digital<span class="has-accent-color"
+                                >.</span
+                              >
                             </h3>
                             <div class="vlt-project-excerpt">
                               <p>
